@@ -8,10 +8,12 @@ KEY_FILE=/ssl/tls.key
 CERT_FILE=/ssl/tls.crt
 MONGO_CERT_FILE=/mongo/tls.crt
 
+JAVA_OPTS="$JAVA_OPTS -Dvertx.cacheDirBase=/tmp/vertx -Xlog:gc*:gc.log -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/logs/frontendDump.hdump"
+
 if [ -f "${KEY_FILE}" ] && [ -f "${CERT_FILE}" ];
 then
-  JAVA_OPTS="$JAVA_OPTS -Dquarkus.http.ssl.certificate.file=${CERT_FILE}"
-  JAVA_OPTS="$JAVA_OPTS -Dquarkus.http.ssl.certificate.key-file=${KEY_FILE}"
+  JAVA_OPTS="$JAVA_OPTS -Dquarkus.http.ssl.certificate.files=${CERT_FILE}"
+  JAVA_OPTS="$JAVA_OPTS -Dquarkus.http.ssl.certificate.key-files=${KEY_FILE}"
   JAVA_OPTS="$JAVA_OPTS -Dquarkus.http.insecure-requests=disabled"
 fi
 
@@ -24,9 +26,15 @@ fi
 if [ -f "${MONGO_CERT_FILE}" ];
 then
   cp $JAVA_HOME/lib/security/cacerts .
-  keytool -import -alias mongodb -storepass changeit -keystore ./cacerts -file "${MONGO_CERT_FILE}" -noprompt
-  JAVA_OPTS="$JAVA_OPTS -Djavax.net.ssl.trustStore=./cacerts -Djavax.net.ssl.trustStorePassword=changeit"
+  KEYSTORE_PASS=$(tr -dc A-Za-z0-9 </dev/urandom | head -c 30; echo)
+  keytool -storepasswd -storepass changeit -new $KEYSTORE_PASS -keystore cacerts
+
+  keytool -import -alias mongodb -storepass $KEYSTORE_PASS -keystore ./cacerts -file "${MONGO_CERT_FILE}" -noprompt
+
+  JAVA_OPTS="$JAVA_OPTS -Djavax.net.ssl.trustStore=./cacerts -Djavax.net.ssl.trustStorePassword=$KEYSTORE_PASS"
   export MONGODB_SSL="true"
 fi
+
+export DEPLOYMENT_TYPE="${deploymentType}"
 
 java $JAVA_OPTS -jar ${deploymentType}.jar
